# sagetech-mxs-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmwalk.json
sdk/: CMakeLists.txt  sagetech_mxs.h  sg.h  sgDecodeAck.c  sgDecodeFlightId.c  sgDecodeHealthMonitor.c  sgDecodeInstall.c  sgDecodeMSR.c  sgDecodeOperating.c  sgDecodeSVR.c  sgDecodeSerialNumber.c  sgDecodeStatus.c  sgDecodeVersion.c  sgEncodeDataReq.c  sgEncodeFlightId.c  sgEncodeGPS.c  sgEncodeInstall.c  sgEncodeMSR.c  sgEncodeMode.c  sgEncodeOperating.c  sgEncodeSVR.c  sgEncodeTargetReq.c  sgsDecodeDF0.c
tests/sdk/: main.c  testDecodeAck.c  testDecodeFlightId.c  testDecodeHealthMonitor.c  testDecodeInstall.c  testDecodeMSR.c  testDecodeSVR.c  testDecodeSerialNumber.c  testDecodeStatus.c  testDecodeVersion.c  testEncodeDataReq.c  testEncodeFlightId.c  testEncodeGPS.c  testEncodeInstall.c  testEncodeMode.c  testEncodeOperating.c  testEncodeTargetReq.c  testSgMessages.h
util/: CMakeLists.txt  alt2Buf.c  charArray2Buf.c  gs2Buf.c  heading2Buf.c  nmea.c  nmea.h  sgUtil.h  toTOA.c  toa2Buf.c  vel2Buf.c
